# humla

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: windows-sidecars.yml
audio-capture/: Info.plist  Package.swift
audio-capture-rs/: Cargo.toml
audio-capture-rs/src/: audio.rs  events.rs  main.rs  mic.rs  resample.rs  stats.rs  system_win.rs
audio-capture/Sources/audio-capture/: main.swift
docs/design/: per-language-transcription.md
docs/superpowers/plans/: 2026-04-29-vad-streaming-whisper.md  2026-05-06-stt-adapter-phase2.md  2026-05-07-per-language-transcription-phase4.md  2026-05-07-stt-adapter-phase3.md
marketing/reddit/: README.md  subreddits.md
marketing/reddit/lib/: fetch.py
marketing/reddit/routines/: historical-scan.md  karma-builder.md  lead-finder.md  research-and-drafts.md
scripts/: build-dmg.sh  build-metallib.sh  build-msi.ps1  build-sidecar.sh  build-sidecars-windows.ps1  release.sh
speaker-diarize-rs/: Cargo.toml
speaker-diarize-rs/src/: download.rs  engine.rs  io_wav.rs  main.rs
speaker-diarize/Sources/speaker-diarize/: main.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default.metallib
src-tauri/src/: commands.rs  db.rs  diarize.rs  gguf.rs  languages.rs  lib.rs  local_llm.rs  local_whisper.rs  openai.rs  presets.rs  recording.rs
src-tauri/src/stt/: config.rs  deepgram.rs  keychain.rs  local.rs  mod.rs  openai.rs  openai_compat.rs
src/components/: Layout.tsx  Permissions.tsx  PolishToast.tsx  RecordingBar.tsx  Sidebar.tsx  SidebarCollapsed.tsx  Updater.tsx
src/lib/: ipc.ts  languages.ts  platform.ts  presets.ts  store.ts
src/pages/: Home.tsx  Note.tsx  Settings.tsx
src/pages/settings/: types.ts  useSettings.ts
src/pages/settings/components/: DiarizeModelManager.tsx  LocalModelManager.tsx  PerLanguageOverrides.tsx  ProviderConfigForm.tsx  SummaryPromptsManager.tsx
src/pages/settings/tabs/: About.tsx  ApiKeys.tsx  General.tsx  Summary.tsx  Transcription.tsx
src/styles/: globals.css
