# audio-capture-rs — Windows port of the macOS Swift `audio-capture` sidecar.
#
# Replicates the same stdout JSON event protocol so the Rust backend
# (src-tauri/src/commands.rs) treats this binary identically to the Swift one:
#
#   stdout (line-delimited JSON):
#     {"event":"chunk","source":"mic"|"sys","path":"…","start_ms":N}
#     {"event":"full_recording","source":"mic"|"sys","path":"…","duration_ms":N}
#     {"event":"heartbeat","mic_frames":…,"sys_frames":…,"chunks":…,"mic_peak":…,"sys_peak":…}
#     {"event":"paused"} / {"event":"resumed"} / {"event":"stopped"} / {"event":"error","message":…}
#
#   stdin (line-delimited commands, Windows pause/resume/stop IPC):
#     pause\n   resume\n   stop\n
#
# Mic input via cpal (cross-platform), system audio via WASAPI loopback (Windows
# only). On non-Windows targets the system capture path compiles to a no-op so
# the binary still builds for parity testing on Linux/macOS dev machines, but
# only emits mic chunks.

[package]
name = "audio-capture-rs"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "audio-capture"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hound = "3"               # WAV writer
cpal = "0.15"             # cross-platform mic capture
crossbeam-channel = "0.5" # lock-free MPMC for audio→writer hand-off
parking_lot = "0.12"
ctrlc = "3"               # cross-platform Ctrl+C / SIGTERM handler

[target.'cfg(windows)'.dependencies]
wasapi = "0.18"           # Windows system audio loopback capture
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
