[package]
name = "humla"
version = "0.24.1"
description = "Humla — personal meeting notes that hum along"
authors = ["Michael Wilhelmsen"]
edition = "2021"
rust-version = "1.85"
license = "MIT"

[lib]
name = "humla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# native-tls (schannel on Windows, Security.framework on macOS) over
# rustls. rustls bundles the Mozilla root store, which can't validate
# corporate MITM certs an end user's IT department may inject — the
# diarize sidecar hit `UnknownIssuer` against HuggingFace on a managed
# Suffolk machine until it switched. Same lesson here for the main
# backend's HF / OpenAI / Deepgram / Groq calls.
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls", "stream"], default-features = false }
futures-util = "0.3"
# Local LLM inference is delegated to whichever OpenAI-compatible HTTP server
# the user runs (Ollama, LM Studio, llama-server, vLLM, …). We reuse the
# existing reqwest client; no in-process GGML runtime to avoid the static
# duplicate-GGML conflict with whisper-rs.
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = "0.4"
parking_lot = "0.12"
dirs = "5"
tauri-plugin-process = "2"

# --- Whisper backend selection ---
# macOS gets Metal (Apple Silicon GPU). Windows gets Vulkan (broad GPU
# coverage: NVIDIA, AMD, Intel). Linux falls through to CPU by default —
# add `vulkan` here if you want GPU on Linux too.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal", "raw-api"] }
# OpenAI key lives in macOS Keychain. `apple-native` avoids the D-Bus /
# linux-keyutils transitive deps we'd otherwise pick up by default.
keyring = { version = "3", default-features = false, features = ["apple-native"] }
libc = "0.2"
# macos-private-api flips on _NSWindow private API usage at the Tauri
# level — only valid on macOS, so we pull tauri's macos feature here too.
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan", "raw-api"] }
# API keys live in Windows Credential Manager.
keyring = { version = "3", default-features = false, features = ["windows-native"] }
# Used for sidecar process control (job objects so killing the parent
# tears the child down too — the Windows analogue of setsid + SIGTERM).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16", features = ["raw-api"] }
keyring = { version = "3", default-features = false, features = ["linux-native"] }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
